# thesis_ccp_grnerator_nodelet

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: default.yaml
custom_configs/: constraint_manager.yaml  energy_model_config.yaml  trajectory_generation_config.yaml
custom_worlds/berezyna/: grass_plane.world  world_simulation.yaml
custom_worlds/camp_field/: grass_plane.world  world_simulation.yaml
custom_worlds/ostrov/: grass_plane.world
custom_worlds/temesvar/: grass_plane.world
include/: EnergyCalculator.h  Graph.hpp  LoggerRos.h  MapPolygon.hpp  PathGenerator.h  ShortestPathCalculator.hpp  SimpleLogger.h  TrajectoryGenerator.h  algorithms.hpp  custom_types.hpp  utils.hpp
include/mstp_solver/: Insertion.h  MtspSolver.h  SolverConfig.h  Target.h  TargetSet.h
include/mstsp_solver/: Insertion.h  MstspSolver.h  SolverConfig.h  Target.h  TargetSet.h
launch/: thesis_path_generator.launch  thesis_trajectory_generator.launch
pugixml/docs/: manual.html  quickstart.html
scripts/: csv_to_kml.py  show_polygons.py  template.kml  test.kml
simulation_scripts/one_drone/: lake.kml  session.yml
simulation_scripts/one_drone_complex_lake/: complex_lake.kml  session.yml
simulation_scripts/one_drone_long_lake/: long_lake.kml  session.yml
simulation_scripts/test_3_drones/: session.yml
simulation_scripts/test_3_uavs/: session.yml
simulation_scripts/test_multiple_drones/: session.yml
simulation_scripts/test_no_lake/: extremely_simple.kml  long_lake.kml  no-lake-big.kml  session.yml  test_no_lake.kml  test_no_lake_fly_zone_only.kml  test_no_lake_interesting.kml  test_no_lake_simple_shape.kml  test_no_lake_simple_with_island.kml
simulation_scripts/test_temesvar/: session.yml
src/: EnergyCalculator.cpp  Graph.cpp  MapPolygon.cpp  PathGenerator.cpp  ShortestPathCalculator.cpp  TrajectoryGenerator.cpp  algorithms.cpp  main.cpp  utils.cpp
src/mstp_solver/: MtspSolver.cpp  TargetSet.cpp
src/mstsp_solver/: MstspSolver.cpp  TargetSet.cpp
srv/: CalculateEnergy.srv  GeneratePaths.srv
