<?xml version="1.0"?>
<package format="2">

  <name>thesis_trajectory_generator</name>
  <version>1.0.0</version>
  <description>more_desctription</description>

  <maintainer email="ddatsko010101@gmail.com">Denys Datsko</maintainer>
  <author email="ddatsko010101@gmail.com">Denys Datsko</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
